--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/coffee-toolbox/actor#readme",
   "dependencies": {
-    "@coffee-toolbox/logger": "^1.0.1"
+    "@coffee-toolbox/logger": "git+https://github.com/coffee-toolbox/logger.git"
   },
   "devDependencies": {
     "coffee-loader": "^0.7.2",
